fix table header z-index

--- a/src/app/user/user-list/user-list-table.component.scss
+++ b/src/app/user/user-list/user-list-table.component.scss
@@ -14,7 +14,7 @@
             color: $accent2;
             position: sticky;
             top: 0;
-
+            z-index: 99;
         }
         .content-row:nth-child(odd) {
             background-color: $light-gray;
